changing word 'Package' by 'Namespace'

--- a/perldoc/package-summary.html
+++ b/perldoc/package-summary.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<h3>Packages</h3>
+<h3>Namespaces</h3>
 <table cellpadding="0" cellspacing="0">
 <tr>
 <td><a href="org/puremvc/perl5/patterns/mediator/package-detail.html">org::puremvc::perl5::patterns::mediator</a>
