--- a/perldoc/title-bar.html
+++ b/perldoc/title-bar.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div style="background-color: #222288; color: #EEEEEE"><h2>PureMVC Perl 5 - Standard Version - API Documentation</h2>
-<a href="package-summary.html" style="color: #EEEEEE">All Packages</a>
+<a href="package-summary.html" style="color: #EEEEEE">All Namespaces</a>
 <a href="all-classes.html" style="color: #EEEEEE">All Classes</a>
 </div>
 </body>
